fixing bugs on mobile responsiveness | fitness website

--- a/assignments/A02/style.css
+++ b/assignments/A02/style.css
@@ -957,6 +957,9 @@ footer {
         grid-template-columns: repeat(1, 1fr);
         justify-content: center;
         align-items: center;
+
+        padding-bottom: 46px;
+        
     }
 
     .header-content {
